# obsidian-RAG

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dev-setup.sh  docker-compose.yml  docker.sh  install.sh  package-lock.json  package.json  release.sh
plugin/: .eslintrc.json  esbuild.config.mjs  jest.config.js  jest.setup.js  manifest.json  package-lock.json  package.json  tsconfig.json
plugin/__mocks__/: obsidian.ts
plugin/coverage/: lcov.info
plugin/coverage/lcov-report/: RAGApi.ts.html  index.html
plugin/release/: main.js  manifest.json
plugin/src/: main.ts  settings.ts  types.ts
plugin/src/__tests__/: RAGApi.test.ts
plugin/src/api/: RAGApi.ts
plugin/src/components/: status-bar.ts
plugin/styles/: styles.css
server/: pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_benchmark.py
server/config/: config.example.json
server/src/: chunking.py  config.py  embeddings.py  main.py  utils.py  vault.py
server/src/embeddings/: __init__.py  apple_embeddings.py  benchmark.py  embeddings_manager.py  factory.py
server/src/llm/: llm_manager.py
server/src/processors/: base_processor.py  chunking.py  file_processor.py  markdown_processor.py  pdf_processor.py  processor_factory.py  word_processor.py
server/src/rag/: rag_service.py
server/src/vault/: vault_manager.py
server/tests/: test_apple_embeddings.py  test_benchmark.py  test_chunking.py  test_chunking_strategies.py  test_config.py  test_embeddings.py  test_file_processor.py  test_main.py  test_processors.py  test_rag_service.py  test_vault.py
(+4 files in other folders)
