[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-rag-server"
version = "0.1.0"
description = "Local RAG server for Obsidian vaults"
requires-python = ">=3.9"
authors = [
    { name = "Elwin Sidney", email = "elwinsidney@example.com" }
]

[tool.setuptools]
packages = ["src"] 